Integrated the Settings Activity with the app, Saved and read settings Values when the app starts.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -29,5 +29,11 @@
         android:icon="@drawable/ic_favorites_info"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="50"
+        android:title="@string/settings"
+        app:showAsAction="never" />
+
 
 </menu>
